<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Calculator</string>
    <string name="grant" translatable="false">GRANT NOW</string>
    <string name="dialog_permission" translatable="false">To use this app, allow access to your device manage read and write external storage and camera permission.</string>
    <string name="NoHiddenImages"  translatable="false">No Photos</string>
    <string name="Photos"  translatable="false">Photos</string>
    <string name="files"  translatable="false">Files</string>
    <string name="backup_title"  translatable="false">Backup</string>
    <string name="Videos"  translatable="false">Videos</string>
    <string name="Browser"  translatable="false">Browser</string>
    <string name="Credentials"  translatable="false">Credentials</string>
    <string name="Notes"  translatable="false">Notes</string>
    <string name="appLock"  translatable="false">App Lock</string>
    <string name="Contact"  translatable="false">Contacts</string>
    <string name="anti_lost"  translatable="false">Anti-Lost Guide</string>
    <string name="add_direction"  translatable="false">Tap { + } on the top bar to add one</string>
    <string name="Edit"  translatable="false">EDIT</string>
    <string name="Share"  translatable="false">Share</string>
    <string name="Save"  translatable="false">Save</string>
    <string name="Delete"  translatable="false">Delete</string>
    <string name="Cancel"  translatable="false">CANCEL</string>
    <string name="DeleteFromSystem"  translatable="false">Delete from system</string>
    <string name="oldPass"  translatable="false">Enter your Old Password (4 - Digit)</string>
    <string name="newPass"  translatable="false">Enter New Password (4 - Digit)</string>
    <string name="confPass"  translatable="false">Confirm Password (4 - Digit)</string>
    <string name="DONE"  translatable="false">DONE</string>
    <string name="OldPassword"  translatable="false">Old Password</string>
    <string name="NewPassword"  translatable="false">New Password</string>
    <string name="ConfirmPassword"  translatable="false">Confirm Password</string>
    <string name="browserSettings"  translatable="false">Browser Settings</string>
    <string name="lockSettings"  translatable="false">Lock Settings</string>
    <string name="breakReport"  translatable="false">Break-in-Report</string>
    <string name="breakAlert"  translatable="false">Break in Alert</string>
    <string name="DecoyPasscode"  translatable="false">Decoy Passcode</string>
    <string name="help"  translatable="false">Help</string>
    <string name="ContactUS"  translatable="false">Contact Us</string>
    <string name="RateUs"  translatable="false">Rate us</string>
    <string name="Number"  translatable="false">number</string>
    <string name="ContactDetails"  translatable="false">Contact Details</string>
    <string name="ContactName"  translatable="false">Contact Name</string>
    <string name="FirstName"  translatable="false">First Name</string>
    <string name="LastName"  translatable="false">Last Name</string>
    <string name="PhoneNumber"  translatable="false">Phone Number</string>
    <string name="Email"  translatable="false">Email</string>
    <string name="Birthday"  translatable="false">Birthday</string>
    <string name="NotAvailable"  translatable="false">Not Available</string>
    <string name="NoContacts"  translatable="false">No Contacts Found</string>
    <string name="Add_contacts"  translatable="false">Add contacts from here.</string>
    <string name="Google"  translatable="false">Google</string>
    <string name="Yahoo"  translatable="false">Yahoo</string>
    <string name="Bing"  translatable="false">Bing</string>
    <string name="googlelink"  translatable="false">https://www.google.com/</string>
    <string name="yahoolink"  translatable="false">https://in.yahoo.com/?p=us</string>
    <string name="binglink"  translatable="false">https://www.bing.com/</string>
    <string name="Title"  translatable="false">Title:</string>
    <string name="Website"  translatable="false">Website:</string>
    <string name="Username"  translatable="false">Username:</string>
    <string name="Password"  translatable="false">Password:</string>
    <string name="Notescred"  translatable="false">Notes:</string>
    <string name="ChoosePhoto"  translatable="false">Choose Photo</string>
    <string name="ChooseVideo"  translatable="false">Choose Video</string>
    <string name="ac" translatable="false">AC</string>
    <string name="value_update" translatable="false">+/-</string>
    <string name="percentage" translatable="false">%</string>
    <string name="divide" translatable="false">÷</string>
    <string name="divide_operator" translatable="false">/</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="multiply" translatable="false">x</string>
    <string name="multiply_expression" translatable="false">*</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="plus" translatable="false">+</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="minus" translatable="false">-</string>
    <string name="zero" translatable="false">0</string>
    <string name="comma" translatable="false">,</string>
    <string name="comma_expression" translatable="false">.</string>
    <string name="equals" translatable="false">=</string>
    <string name="invalid_expression_message"  translatable="false">Invalid expression</string>
    <string name="pick_image_intent_text"  translatable="false">Pick Image</string>
    <string name="permission_pick_rationale"  translatable="false">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale"  translatable="false">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="button_allow"  translatable="false">Allow</string>
    <string name="button_deny"  translatable="false">Deny</string>
    <string name="ChangePassword"  translatable="false">Change Password</string>
    <string name="decoy_message"  translatable="false">Your all Decoy account data will be lost. Do you want to continue?</string>
    <string name="success_backup_msg_dialog"  translatable="false"><![CDATA[Your data has been backup into your Google Drive with name <b>CalculatorBackup.zip</b>, so please don\'t delete that file otherwise you can\'t restore your data. ]]></string>
    <string name="success_restore_msg_dialog"  translatable="false"><![CDATA[Your backup will automatically restore after download. ]]></string>
    <string name="confirmation"  translatable="false">Are you sure want to leave this page?</string>
    <string name="delete_image_message"  translatable="false">Are you sure you want to delete from vault?</string>
    <string name="share_intent_images"  translatable="false">Image</string>
    <string name="share_intent_Videos"  translatable="false">Video</string>
    <string name="how_to_recover_passcode"  translatable="false">How To Recover Passcode</string>
    <string name="step_1"  translatable="false">Step 1 :</string>
    <string name="first_enter_0000"  translatable="false">First enter 0000 in Calculator and press % button.</string>
    <string name="step_2"  translatable="false">Step 2 :</string>
    <string name="give_correct_answer"  translatable="false">Give correct answer of your question and click on show passcode then you will get back your passcode.</string>
    <string name="security"  translatable="false">Security</string>
    <string name="give_answer_of"  translatable="false">Give answer of your question and retrieve your forgot passcode.</string>
    <string name="answer"  translatable="false">Answer :</string>
    <string name="answer_"  translatable="false">Answer</string>
    <string name="show_passcode"  translatable="false">Show Passcode</string>
    <string name="set_answer"  translatable="false">Set Answer</string>
    <string name="break_in_report"  translatable="false">Break-in-Report</string>
    <string name="recovery_passcode"  translatable="false">Recover Passcode</string>
    <string name="backup"  translatable="false">Backup</string>
    <string name="backup_and_restore"  translatable="false">Backup And Restore</string>
    <string name="rate_app"  translatable="false">Rate App</string>
    <string name="more_apps"  translatable="false">More Apps</string>
    <string name="please_wait"  translatable="false">Please wait...</string>
    <string name="browser_setting"  translatable="false">Browser Settings</string>
    <string name="back_to_calculator"  translatable="false">Back To Calculator</string>
    <string name="lock_setting"  translatable="false">Lock Settings</string>
    <string name="write_your_note_here"  translatable="false">Description</string>
    <string name="add_notes"  translatable="false">Add notes from here.</string>
    <string name="add_credentials"  translatable="false">Add credentials from here.</string>
    <string name="add_photos"  translatable="false">Add photos from here.</string>
    <string name="add_videos"  translatable="false">Add videos from here.</string>
    <string name="search_here"  translatable="false">Search Here</string>
    <string-array name="forgot_passcode_questions">
        <item>What is your favorite team?</item>
        <item>Who is your favourite movie?</item>
        <item>In what town was your first job?</item>
        <item>What is your nickname?</item>
        <item>What is your favourite book?</item>
        <item>Who was your childhood hero?</item>
    </string-array>
    <string name="ad_attribution"  translatable="false">Ad</string>
    <string-array name="continent">
        <item>Africa</item>
        <item>America</item>
        <item>Asia</item>
        <item>Atlantic</item>
        <item>Australia</item>
        <item>Europe</item>
        <item>Indian</item>
        <item>Pacific</item>
        <item>Antarctica</item>
        <item>Brazil</item>
        <item>Canada</item>
        <item>US</item>
        <item>Mexico</item>
        <item>Arctic</item>
        <item>Chile</item>

    </string-array>
    <string name="ads_product_key_monthlydiscount" translatable="false">com.calculatorvault.purchase.monthlydiscount</string>
    <string name="ads_product_key_month" translatable="false">com.calculatorvault.purchase.monthly</string>
    <string name="ads_product_key_year" translatable="false">com.calculatorvault.purchase.yearly</string>
    <string name="banner_ad_unit_id"  translatable="false">ca-app-pub-1168261283036318/5360510180</string>
    <string name="inter_ad_unit_id"  translatable="false">ca-app-pub-1168261283036318/9108183509</string>
    <string name="inter_ad_unit_id1"  translatable="false">ca-app-pub-1168261283036318/1960339074</string>
    <string name="inter_ad_unit_id2"  translatable="false">ca-app-pub-1168261283036318/6449982495</string>
    <string name="native_ad_unit_id"  translatable="false">ca-app-pub-1168261283036318/6060839027</string>
    <string name="native_ad_unit_id1"  translatable="false">ca-app-pub-1168261283036318/2605449719</string>
    <string name="native_ad_unit_id2"  translatable="false">ca-app-pub-1168261283036318/5568199566</string>
    <string name="app_id"  translatable="false">ca-app-pub-1168261283036318~6865163546</string>
    <string name="mopub_int_id"  translatable="false">98dfc4753cf54d58afa7be129898f56e</string>
</resources>