<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/grp1"

        android:checkableBehavior="none">
        <item
            android:id="@+id/back_to_calculator"
            android:title="Back To Calculator"/>
        <item
            android:id="@+id/menu_settings"
            android:title="Settings"/>
        <item
            android:id="@+id/nav_browser_setting"
            android:title="@string/browserSettings" />
        <item
            android:id="@+id/menu_security"
            android:title="Security" />
        <item
            android:id="@+id/nav_lockSetting"
            android:title="@string/lockSettings" />
        <item
            android:id="@+id/nav_break_in_Report"
            android:title="@string/breakReport" />
        <item
            android:id="@+id/nav_decoy"
            android:title="@string/DecoyPasscode" />
        <item
            android:id="@+id/nav_recover_passcode"
            android:title="@string/how_to_recover_passcode" />
        <item
            android:id="@+id/menu_help"
            android:title="@string/help" />

        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/ContactUS" />
        <item
            android:id="@+id/nav_rate_us"
            android:title="@string/RateUs" />
    </group>
</menu>