<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbar_top"
        style="@style/ToolBarStyle.Event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/ContactDetails"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />


            <LinearLayout
                android:id="@+id/ll_save_newContact"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:visibility="visible">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_done_black_24dp" />
                <!--  <ImageView
                      android:id="@+id/iv_more_app"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="@drawable/animation_list_filling"
                      android:visibility="visible" />-->

            </LinearLayout>

            <!-- <ImageView
                 android:id="@+id/iv_blast"
                 android:layout_width="?attr/actionBarSize"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="1dp"
                 android:background="@drawable/blast_anim"
                 android:visibility="gone" />-->

         <!--   <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:paddingLeft="16dp"
                android:paddingRight="12dp"
                android:src="@mipmap/ic_action_navigation_arrow_back"
                android:visibility="visible" />-->
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:src="@drawable/ic_back_arrow"/>

        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:layout_below="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_contactPhoto"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@drawable/manuser"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorPrimary"/>

            <TextView
                android:id="@+id/tv_contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ContactName"
                android:textSize="@dimen/_14ssp"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FirstName"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ed_contactFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FirstName"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginBottom="@dimen/_3sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LastName"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ed_contactLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/LastName"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginBottom="@dimen/_3sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PhoneNumber"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ed_contactPhonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PhoneNumber"
                    android:maxLength="12"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginBottom="@dimen/_3sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Email"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ed_contactemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginBottom="@dimen/_3sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Birthday"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ed_contactBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Birthday"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginBottom="@dimen/_3sdp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
