<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HowToRecoverPassActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/j_toolbar_browser">

            <TextView
                android:fontFamily="@font/poppins_regular"
                android:id="@+id/tv_title"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="end"
                android:textStyle="bold"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/recovery_passcode"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/ll_gift"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="7dp"
                android:paddingLeft="25dp"
                android:paddingTop="3dp">

                <ImageView
                    android:id="@+id/iv_more_app"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/animation_list_filling"
                    android:visibility="gone" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_blast"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentRight="true"
                android:layout_marginRight="1dp"
                android:background="@drawable/blast_anim"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_howToRecover_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="12dp"
                android:padding="2dp"
                android:src="@drawable/j_btn_back" />

        </RelativeLayout>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" >

        <TextView
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/step_1"
            android:textAppearance="@style/TextAppearance.Widget.Event.Toolbar.Title"
            android:textColor="@color/navy_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/first_enter_0000"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/navy_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/step_2"
            android:textAppearance="@style/TextAppearance.Widget.Event.Toolbar.Title"
            android:textColor="@color/navy_blue"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/give_correct_answer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/navy_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <!--<com.google.android.gms.ads.AdView-->
            <!--android:id="@+id/adView"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:visibility="visible"-->
            <!--ads:adSize="SMART_BANNER"-->
            <!--ads:adUnitId="@string/banner_ad_unit_id"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent" />-->

        <FrameLayout
            android:id="@+id/fl_adplaceholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/greedyTest"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>